--- a/style.css
+++ b/style.css
@@ -127,3 +127,10 @@ padding-bottom :25% ;
 
 }
 
+footer {
+    background-color: orange;
+    height: 50px;
+    text-align: center;
+    color: white;
+    line-height: 45px;
+}
