--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .container {
 
     margin: 0 auto;
-    height: 1000px;
+    height: 1500px;
 
 }
 .logo {
@@ -121,9 +121,9 @@ h2 {
 .about  a{
     display: block;
 }
-.about  a:hover{
+
     /* background-color: orangered; */
-}
+
 .li-home {
     padding-left: 50px;
 }
@@ -223,6 +223,7 @@ aside img {
     padding-bottom: 15px;
     padding-top: 10px;
     border-bottom: 1px solid gray   ;
+    
 }
 .new a {
     text-decoration: none;
@@ -233,14 +234,67 @@ aside img {
     color: orange;
 }
 
+footer{
+    display: grid;
+    grid-template-columns:70% 30% ;
+  
+    margin: 140px;
+}
+.footer-left{
+    font-size: large;
+}
+.footer-left h4{
+    color: #3e3e3e;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0 0 5px 0;
+    display: inline-block;
 
-/* aside img {
-    position: absolute;
-    left: 600px;
-} */
-footer {
-    background-color: orange;
-    height: 50px;
-    text-align: center;
-    line-height: 45px;
+}
+.adress-footer{
+    color: #3e3e3e;
+    font-size: 14px;
+padding-bottom: 5px;
+
+}
+#address{
+    color: orange;
+}
+.phone_number-footer{
+    color: #3e3e3e;
+    font-size: large;
+}
+#phone{
+    padding: 5px 0;
+    color: orange;
+
+}
+.footer-right{
+word-spacing: 1px;
+}
+.active_person{
+    padding-bottom: 5px;
+
+}
+.sum_person{
+    padding-bottom: 5px;
+}
+#user{
+    color: orange;
+    padding-right: 5px;
+}
+#users{
+    padding-right: 5px;
+
+    color: orange;
+}
+span{
+    color: #0053b1;
+}
+.creat{
+    color: orange;
+}
+#author{
+    text-decoration: none;
+    font-size: large;
 }
