--- a/map.css
+++ b/map.css
@@ -220,21 +220,6 @@ h2 {
     text-align: left;
 
 }
-.menu>ul>li>.contact{
-    position: absolute;
-    display: none;
-}
-.menu>ul>li:hover>.contact{
-    background-color: white;
-    display: block;
-}
-.contact a{
-    display: block;
-    width: 120px;
-    border: 1px solid grey;
-    text-align: left;
-    
-}
 
 .menu>ul>li>.resources{
     position: absolute;
@@ -290,106 +275,64 @@ marquee {
     padding-bottom: 25%;
 
 }
-
-.big-infomation {
-
-    position: relative;
-    padding: 50px 100px;
+.contact{ 
+    height: 500px;
     display: grid;
-    grid-template-columns: 75% 1fr;
-}
-
-.articel {
-
-    position: relative;
-    /* height: 1000px; */
-}
-
-.articel-child {
-    display: grid;
-    grid-template-columns: 65% 35%;
-    position: relative;
-}
-
-.articel-child a {
-    position: absolute;
-
-    top: 20px;
-    left: 450px;
-
-    font-size: 21px;
-    color: #0053b1;
-    text-decoration: none;
-}
-
-.articel-child p {
-    position: absolute;
-    top: 80px;
-    left: 450px;
-    color: #5c5c5c;
-
-    font-size: 21px;
-    font-style: italic;
-}
-
-.articel-child img {
-    position: absolute;
-    left: 20px;
-}
-
-.articel-annouce {
-
+    grid-template-columns: 40% 60%;
     text-align: center;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    position: absolute;
-    top: 300px;
-
-
+ 
 }
-
-.articel-annouce a {
-    text-decoration: none;
+form{
+    margin-left: 50px;
 }
-
-
-.aside {
-    position: relative;
-    /* height: 600px; */
-
+.name_phone input {
+width: 150px;
+height: 23px;
+margin-right: 20px;
 }
-
-aside img {
-    position: absolute;
-    left: 600px;
+.ct{
+    color: black;
+    font-style: normal;
+    font-size: 40px;
+    padding-top: 30px;
 }
-
-.new {
-
-    display: grid;
-    grid-template-columns: 47% 1fr;
-    padding-bottom: 15px;
-    padding-top: 10px;
-    border-bottom: 1px solid gray;
-
+.contacus p{
+    font-size: 17px;
+    padding-bottom: 20px;
 }
+.Email{
+    margin-top: 22px;
+    margin-right: 20px;
+    width: 332px;
+    height: 23px;
+    
+} textarea{
+    margin-top: 22px;
 
-.new a {
-    text-decoration: none;
+    margin-right: 20px;
+
+    width: 335px;
 }
+ button{
+    margin-top: 22px;
+    margin-right: 20px;
 
-
-#bell {
-    color: orange;
-}
-
+    height: 50px;
+    width: 345px;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    background-color: #FF85B3;
+ }
+ .map{
+    margin-top: 30px;
+ }
 footer {
     display: grid;
     grid-template-columns: 70% 30%;
     padding-top: 50px;
     text-align: center;
     background-color: #FEF9A7;
-    
 
 }
 
