--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ nav {
 nav a {
 
     padding: 0 15px;
-
-    color: black;
+   /* font-weight: bold; */
+    color: #262626;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -219,21 +219,7 @@ h2 {
     text-align: left;
 
 }
-.menu>ul>li>.contact{
-    position: absolute;
-    display: none;
-}
-.menu>ul>li:hover>.contact{
-    background-color: white;
-    display: block;
-}
-.contact a{
-    display: block;
-    width: 120px;
-    border: 1px solid grey;
-    text-align: left;
-    
-}
+
 
 .menu>ul>li>.resources{
     position: absolute;
@@ -289,12 +275,20 @@ marquee {
     padding-bottom: 25%;
 
 }
+.backgourd{
+    width: 100%;
+    height: 30px;
+    /* background-color: #0053b1; */
+    background-image: linear-gradient(#92B4EC, white);
+}
+
 
 .big-infomation {
 
     position: relative;
-    padding: 50px 100px;
+    padding: 41px 100px;
     display: grid;
+    grid-column-gap: 40px;
     grid-template-columns: 75% 1fr;
 }
 
@@ -341,6 +335,7 @@ marquee {
     text-align: center;
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
+    grid-column-gap: 5px;
     position: absolute;
     top: 300px;
 
@@ -367,6 +362,7 @@ aside img {
 
     display: grid;
     grid-template-columns: 47% 1fr;
+    grid-column-gap: 20px ;
     padding-bottom: 15px;
     padding-top: 10px;
     border-bottom: 1px solid gray;
@@ -439,6 +435,10 @@ footer {
     padding-bottom: 5px;
     /* padding-right: 5px; */
 
+} 
+h3{
+    color: #0053b1;
+    text-decoration: underline;
 }
 
 .sum_person {
